changes in color and otehr modification

--- a/assets/css/templatemo-eduwell-style.css
+++ b/assets/css/templatemo-eduwell-style.css
@@ -154,7 +154,7 @@ body {
   font-size: 13px;
   color: #fff;
   background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgb(120, 186, 240) 100%);
   padding: 12px 30px;
   display: inline-block;
   border-radius: 5px;
@@ -165,7 +165,7 @@ body {
 
 .main-button-gradient a:hover {
   background: rgb(219,138,222);
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%);
+  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgb(120, 186, 240)  100%);
   opacity: 0.9;
 }
 
@@ -198,7 +198,7 @@ body {
 }
 
 section {
-  margin-top: 120px;
+  margin-top: 20px;
 }
 
 section.more-info {
@@ -251,7 +251,7 @@ header
 */
 .background-header {
   background: rgb(219,138,222) !important;
-  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgba(246,191,159,1) 100%) !important;
+  background: linear-gradient(-145deg, rgba(219,138,222,1) 0%, rgb(120, 186, 240)  100%) !important;
   height: 80px!important;
   position: fixed!important;
   top: 0!important;
@@ -1760,7 +1760,7 @@ body {
   }
   .header-area {
     background: rgb(219,138,222) !important;
-    background: linear-gradient(-145deg, rgb(255, 128, 191) 0%, rgba(246,191,159,19) 100%) !important;
+    background: linear-gradient(-145deg, rgb(255, 128, 191) 0%, rgb(120, 186, 240)  100%) !important;
   }
   .services .owl-nav .owl-next{
     right: -70px;
